<resources>
    <string name="app_name">PracticalCategoryList</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="login_with_facebook">Login with facebook</string>
</resources>