<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    android:orientation="vertical"
    tools:context=".ui.LoginRegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tabLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_off_white"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tabRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <FrameLayout
            android:id="@+id/viewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/bg_white_rounded"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPass1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvForgotPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/teal_200"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:background="@drawable/bg_green"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/viewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_white_rounded"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPass2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:background="@drawable/bg_green"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


        </FrameLayout>


    </RelativeLayout>

    <!--

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/purple_700"
            android:text="@string/login_with_facebook"
            android:textColor="#ffff"
            android:textStyle="bold" />
    -->


</androidx.appcompat.widget.LinearLayoutCompat>